k8s/user_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order_service
  namespace: test
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 30
  replicas: 3
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
      - name: order_service
        image:  shahirsyed5890/order_service:v1.0.version
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: 256m
            memory: 256Mi
          limits:
            cpu: 512m
            memory: 512Mi
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 20
          periodSeconds: 30
          timeoutSeconds: 30
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 20
          periodSeconds: 20
          timeoutSeconds: 20
---
apiVersion: v1
kind: Service 
metadata:
  name: order_svc
  namespace: test
spec:
  type: ClusterIP
  selector:
    app: order
  ports:
  - port: 80
    targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order_ingress
  namespace: test
spec:
  rules:
  - host: health.order
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name:  order_svc
            port:
              number: 80
